It does not render in "P" mode for Game engine if you UV mapa a face of a cube. #34242

Closed
opened 2013-02-14 16:43:32 +01:00 by joaclint · 7 comments

Category: Rendering

%%%--- Operating System, Graphics card ---
Kubuntu 12.10 32 bits, ATI Radeon HD 5450

- Blender version with error, and version that worked ---
  • does not work: 2.66 RC, 2.65a, 2.65

  • works: 2.64

    • Short description of error ---
      It does not render in "P" mode for Game engine if you UV mapa a face of a cube.

    • Steps for others to reproduce the error (preferably based on attached .blend file) ---
      From a new file (this is important)

  • Select a face

  • UV map this face
    It does not render in "P" render for Game engine
    Even if you give a materia with Face texture
    Even if teh cube has no material
    Important: if you now add a plane (no material) and UV map his face, then the map in the cube with no material renders in P" render.
    %%%

**Category**: Rendering %%%--- Operating System, Graphics card --- Kubuntu 12.10 32 bits, ATI Radeon HD 5450 - Blender version with error, and version that worked --- - does not work: 2.66 RC, 2.65a, 2.65 - works: 2.64 - Short description of error --- It does not render in "P" mode for Game engine if you UV mapa a face of a cube. - Steps for others to reproduce the error (preferably based on attached .blend file) --- From a new file (this is important) - Select a face - UV map this face It does not render in "P" render for Game engine Even if you give a materia with Face texture Even if teh cube has no material Important: if you now add a plane (no material) and UV map his face, then the map in the cube with no material renders in P" render. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Moved from Blender 2.6 Bug Tracker to Game Engine%%%

%%%Moved from Blender 2.6 Bug Tracker to Game Engine%%%

%%%This seems to be caused by the "Use Material Caching" option in the Scene properties, when you switch to Blender Game. The tooltip actually mentions that this can give problems with single/multitexture draw modes.

I'm not sure if this is expected or should be considered a bug, assigning to Daniel.%%%

%%%This seems to be caused by the "Use Material Caching" option in the Scene properties, when you switch to Blender Game. The tooltip actually mentions that this can give problems with single/multitexture draw modes. I'm not sure if this is expected or should be considered a bug, assigning to Daniel.%%%
Author

%%%It works fine with Use Material Caching off in Singletexture mode
It does not work with/without Use Material Caching in Multitexture mode

So, waiting for Daniel´s opinion :)
%%%

%%%It works fine with Use Material Caching off in Singletexture mode It does not work with/without Use Material Caching in Multitexture mode So, waiting for Daniel´s opinion :) %%%

%%%Well, I think Brecht got the wrong Stokes, so I'm assigning this to myself. I personally would like to drop face textures as they add some annoying special cases to the BGE conversion code and result in bugs like this. I'm thinking I could turn off Material Caching for Singletexture/Multitexture scenes in do_versions to minimize the number of old scenes that break. However, multitexture would still be broken as per this bug report.%%%

%%%Well, I think Brecht got the wrong Stokes, so I'm assigning this to myself. I personally would like to drop face textures as they add some annoying special cases to the BGE conversion code and result in bugs like this. I'm thinking I could turn off Material Caching for Singletexture/Multitexture scenes in do_versions to minimize the number of old scenes that break. However, multitexture would still be broken as per this bug report.%%%

%%%As of r54589 material caching can now be disabled for all three modes. As such, I'm considering this bug closed.%%%

%%%As of r54589 material caching can now be disabled for all three modes. As such, I'm considering this bug closed.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34242
No description provided.