BGE: Fix for issue #34242 "It does not render in "P" mode for Game engine if you UV mapa a face of a cube" reported by joaclint.

Material caching can now be disabled for Multitexture and GLSL Materials.